<resources>
    <string name="app_name">Marvel Geek</string>
    <string name="ab_search">Pesquisa</string>
    <string name="str_buscar_personagem">Buscar Personagem</string>
    <string name="author">Autor</string>
    <string name="authorName">Mark Bernardo</string>
    <string name="authorQuadrinhos">Outros Quadrinhos: </string>
    <string name="authorAtualization">Última atualização: </string>
    <string name="toolbarFavoritosTitutlo">Favoritos</string>
    <string name="foundCharacter">Search Character</string>


    <string name="event">Evento</string>
    <string name="eventName">Loki sets about convincing the super-villains of Earth</string>
    <string name="eventListaHerois">Lista de Heróis: </string>
    <string name="eventListaCriadores">Lista de Criadores: </string>

    <string name="heroeName">Nome do Herói</string>
    <string name="heroeBio">Biografia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">710172689696639</string>
    <string name="fb_login_protocol_scheme">fb710172689696639</string>
    <string name="logInVisitor">Guest Sign-in</string>
    <string name="loginFacebook">Facebook Sign-in</string>
    <string name="loginGoogle">Google Sign-in</string>
    <string name="favorite">Favorites</string>
</resources>