<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorActivity"
    android:background="@color/opacityblack">

    <Toolbar
        android:id="@+id/tbAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/marvelRed"
        android:title="@string/author"
        android:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:navigationIcon="@drawable/ic_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbAuthor">

        <ImageView
            android:id="@+id/ivAuthor"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_person"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorName"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="35dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/authorAtualization"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/authorAtualizationData"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>