<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthorActivity"
    android:background="@color/opacityblack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/ivAuthor"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/tvAuthorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/authorName"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="left"
                android:text="@string/authorQuadrinhos"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvListaQuadrinhos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="left"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:inputType="textMultiLine"/>

            <TextView
                android:id="@+id/tvAuthorAtualizacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="left"
                android:text="@string/authorAtualization"
                android:textColor="@color/white"
                android:textSize="10dp"
                android:inputType="textMultiLine"/>


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>