<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"

        android:src="@drawable/back4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/marvel_geek_no_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLoginVisitante"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkgray"
        android:text="@string/logInVisitor"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <!--        <Button-->
    <!--            android:id="@+id/btnLoginTwitter"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="60dp"-->
    <!--            android:layout_marginHorizontal="20dp"-->
    <!--            android:layout_marginTop="490dp"-->
    <!--            android:backgroundTint="#B31B9BE8"-->
    <!--            android:drawableLeft="@drawable/ic_twitter"-->
    <!--            android:text="Entrar com o Twitter"-->
    <!--            android:textColor="@color/white" />-->

    <Button
        android:id="@+id/btnLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/facebookColor"
        android:drawableLeft="@drawable/ic_facebook_app_logo"
        android:text="@string/loginFacebook"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginVisitante" />

    <Button
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/googleColor"
        android:drawableLeft="@drawable/ic_google"
        android:layout_marginTop="20dp"
        android:text="@string/loginGoogle"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook" />
</androidx.constraintlayout.widget.ConstraintLayout>